[gd_scene load_steps=7 format=2]

[ext_resource path="res://Stage5.gd" type="Script" id=1]
[ext_resource path="res://Levels/Level 1/PathFollow2D.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Enemy2/Enemy2.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Enemy3/Enemy3.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 448, 1024, 0, 0, 0, 0, 448, 64, 0, 0, 0, 0, 448, 1024 )
}

[sub_resource type="Curve2D" id=2]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1472, 64, 0, 0, 0, 0, 1472, 1024, 0, 0, 0, 0, 1472, 64, 0, 0, 0, 0, 1472, 64 )
}

[node name="Stage5" type="Node"]

script = ExtResource( 1 )

[node name="Path2D" type="Path2D" parent="." index="0"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D" index="0"]

position = Vector2( 448, 1024 )
rotation = -1.5708
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
script = ExtResource( 2 )

[node name="Enemy2" parent="Path2D/PathFollow2D" index="0" instance=ExtResource( 3 )]

[node name="Path2D2" type="Path2D" parent="." index="1"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D2" index="0"]

position = Vector2( 1472, 64 )
rotation = 1.5708
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
script = ExtResource( 2 )

[node name="Enemy1" parent="Path2D2/PathFollow2D" index="0" instance=ExtResource( 3 )]

[node name="Enemy3" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 1024, 64 )

[connection signal="died" from="Path2D/PathFollow2D/Enemy2" to="." method="_on_Enemy2_died"]

[connection signal="died" from="Path2D2/PathFollow2D/Enemy1" to="." method="_on_Enemy1_died"]

[connection signal="died" from="Enemy3" to="." method="_on_Enemy3_died"]


